# minimizer_snippet

./: CMakeLists.txt  LICENSE  README.md  full.cpp  minimizer.cpp  minimizer.h  minimizer_parallel.h  test.fasta
